--- a/Web/WebContent/buteegdehuun.xhtml
+++ b/Web/WebContent/buteegdehuun.xhtml
@@ -16,15 +16,7 @@
 				Хэрэв та хүнсний <strong>бүтээгдэхүүний төрөл</strong> болон <strong>шинэ
 					бүтээгдэхүүн</strong> нэмэх бол
 				<div class="btn-group">
-					<button type="button"
-						class="btn btn-danger dropdown-toggle waves-effect waves-light"
-						data-toggle="dropdown" aria-expanded="false">
-						<i class="fa fa-plus"></i> Нэмэх <span class="caret"></span>
-					</button>
-					<ul class="dropdown-menu" role="menu">
-						<li><a href="#">Төрөл нэмэх</a></li>
-						<li><a href="#">Бүтээгдэхүүн нэмэх</a></li>
-					</ul>
+					<p:commandLink styleClass="btn btn-danger dropdown-toggle waves-effect waves-light" action="orts" value="Нэмэх" />
 				</div>
 				товч дарна уу
 			</div>
