--- a/Web/WebContent/orts.xhtml
+++ b/Web/WebContent/orts.xhtml
@@ -34,28 +34,16 @@
 								<p class="text-muted font-13 m-b-30">Хүнсний ногооны төрөл</p>
 
 								<div class="form-group">
-									<label for="exampleInputEmail1">Нэр</label> <input type="test"
-										class="form-control" id="exampleInputEmail1" placeholder="Нэр" />
+									<label for="form:ortsCategoryName">Нэр</label> 
+									<p:inputText id="ortsCategoryName" styleClass="form-control" value="#{infoController.currentOrtsCategory.name}" />
 								</div>
 
-								<button type="submit"
-									class="btn btn-purple waves-effect waves-light">Submit</button>
+								<p:commandLink actionListener="#{infoController.saveCurrentOrtsCategory()}" styleClass="btn btn-purple waves-effect waves-light" value="Хадгалах" />
 							</div>
 							<div class="col-lg-12">
-								<table class="table">
-									<tr>
-										<th>
-										#
-										</th>
-										<th>
-										Нэр
-										</th>
-									</tr>
-									<tr>
-										<td>1</td>
-										<td>блйыб</td>
-									</tr>
-								</table>
+								<p:dataTable styleClass="table myTable listOrtsCategory" value="#{infoController.listOrtsCategory}" var="ortsCat">
+									<p:column headerText="Нэр">#{ortsCat.name}</p:column>
+								</p:dataTable>
 								
 							</div>
 						</div>
@@ -158,12 +146,10 @@
 										<textarea class="form-control" id="desc" rows="4" cols="30"> </textarea>
 									</div>
 									<div class="form-group">
-										<label for="type">Төрөл</label> <select class="form-control"
-											placeholder="Нэгж" name="orts[negj]" id="type">
-											<option value="1" selected="selected">кг</option>
-											<option value="2">литр</option>
-											<option value="3">ширхэг</option>
-										</select>
+										<label for="type">Төрөл</label>
+										<p:selectOneMenu styleClass="listOrtsCategory form-control">
+											<f:selectItems value="#{infoController.listOrtsCategory}" var="ortsCategory" itemLabel="#{ortsCategory.name}" itemValue="#{ortsCategory.pkId}" />
+										</p:selectOneMenu>
 
 									</div>
 									<div class="form-group">
