--- a/Web/WebContent/orts.xhtml
+++ b/Web/WebContent/orts.xhtml
@@ -5,6 +5,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:p="http://primefaces.org/ui"
+	xmlns:pe="http://primefaces.org/ui/extensions"
 	template="template/garden_template.xhtml">
 	<ui:define name="content">
 		<div class="container">
@@ -35,19 +36,29 @@
 
 								<div class="form-group">
 									<label for="form:ortsCategoryName">Нэр</label> 
-									<p:inputText id="ortsCategoryName" styleClass="form-control" value="#{infoController.currentOrtsCategory.name}" />
+									<p:inputText id="ortsCategoryName" styleClass="form-control listOrtsCategory" value="#{infoController.currentOrtsCategory.name}" />
 								</div>
 
-								<p:commandLink actionListener="#{infoController.saveCurrentOrtsCategory()}" styleClass="btn btn-purple waves-effect waves-light" value="Хадгалах" />
+								<p:commandLink action="#{infoController.saveCurrentOrtsCategory()}" styleClass="btn" value="Хадгалах" update="@(.listOrtsCategory)" />
 							</div>
 							<div class="col-lg-12">
 								<p:dataTable styleClass="table myTable listOrtsCategory" value="#{infoController.listOrtsCategory}" var="ortsCat">
 									<p:column headerText="Нэр">#{ortsCat.name}</p:column>
+									<p:column width="5%"><p:commandButton action="#{infoController.setCurrentOrtsCategoryByPkId(ortsCat.pkId, 'Modified')}" value="Засах" update="@(.listOrtsCategory)" /></p:column>
+									<p:column width="5%">
+										<p:commandButton actionListener="#{infoController.setCurrentOrtsCategoryByPkId(ortsCat.pkId, 'Delete')}" value="Устгах" update="@(.listOrtsCategory)">
+											<p:confirm header="Confirmation" message="Та устгахдаа итгэлтэй байна уу?" icon="ui-icon-alert" />
+										</p:commandButton>
+									</p:column>
 								</p:dataTable>
 								
 							</div>
 						</div>
 					</div>
+					<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+				        <p:commandButton value="Тийм" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+				        <p:commandButton value="Үгүй" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+				    </p:confirmDialog>
 
 					<div class="card-box">
 						<div class="row">
@@ -59,22 +70,18 @@
 									нэгж</p>
 
 								<div class="form-group">
-									<label for="exampleInputEmail1">Нэр</label> <input type="test"
-										class="form-control" id="exampleInputEmail1" placeholder="Нэр" />
+									<label for="exampleInputEmail1">Нэр</label> 
+									<p:inputText styleClass="form-control listOrtsSize" />
 								</div>
 								<div class="form-group">
-									<label for="size">Хэмжээс</label> <input type="number"
-										class="form-control" id="size" placeholder="Хэмжээс" />
+									<label for="size">Хэмжээс</label>
+									<pe:inputNumber style="min-width: 100%; text-align: right;" styleClass="listOrtsSize" />
 								</div>
 								<div class="form-group">
-									<label for="orts_negj">Нэгж</label> <select
-										class="form-control" placeholder="Нэгж" name="orts[negj]"
-										id="orts_negj">
-										<option value="1" selected="selected">кг</option>
-										<option value="2">литр</option>
-										<option value="3">ширхэг</option>
-									</select>
-
+									<label for="orts_negj">Нэгж</label><br/>
+									<p:selectOneMenu>
+										<f:selectItems></f:selectItems>
+									</p:selectOneMenu>
 								</div>
 								<button type="submit"
 									class="btn btn-purple waves-effect waves-light">Submit</button>
@@ -146,7 +153,7 @@
 										<textarea class="form-control" id="desc" rows="4" cols="30"> </textarea>
 									</div>
 									<div class="form-group">
-										<label for="type">Төрөл</label>
+										<label for="type">Төрөл</label><br/>
 										<p:selectOneMenu styleClass="listOrtsCategory form-control">
 											<f:selectItems value="#{infoController.listOrtsCategory}" var="ortsCategory" itemLabel="#{ortsCategory.name}" itemValue="#{ortsCategory.pkId}" />
 										</p:selectOneMenu>
@@ -203,9 +210,6 @@
 	<ui:define name="script">
 		<script>
 			//<![CDATA[
-			$(document).ready(function() {
-			});
-
 			//]]>
 		</script>
 	</ui:define>
