--- a/Web/WebContent/food.xhtml
+++ b/Web/WebContent/food.xhtml
@@ -5,6 +5,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:p="http://primefaces.org/ui"
+	xmlns:pe="http://primefaces.org/ui/extensions"
 	template="template/garden_template.xhtml">
 	<ui:define name="content">
 		<div class="container">
@@ -41,17 +42,17 @@
 
 									<div class="form-group">
 										<label for="name">Нэр</label>
-										<p:inputText styleClass="form-control" id="username"
+										<p:inputText styleClass="form-control"
 											placeholder="Нэр" />
 									</div>
 									<div class="form-group">
 										<label for="name">Тайлбар </label>
-										<p:inputTextarea styleClass="form-control" id="username"
+										<p:inputTextarea styleClass="form-control"
 											placeholder="Тайлбар" />
 									</div>
 									<div class="form-group">
 										<label for="name">Шинж чанар</label>
-										<p:inputText styleClass="form-control" id="username"
+										<p:inputText styleClass="form-control"
 											placeholder="Email" />
 									</div>
 
@@ -63,7 +64,7 @@
 
 									<div class="form-group">
 										<label for="compgard">Төрөл</label>
-										<p:selectOneMenu id="compgard" styleClass="form-control"
+										<p:selectOneMenu styleClass="form-control"
 											value="#{selectOneMenuView.console}" style="width:125px">
 											<f:selectItem itemLabel="Select One" itemValue="" />
 											<f:selectItem itemLabel="Xbox One" itemValue="Xbox One" />
@@ -93,122 +94,53 @@
 								<h5 class="m-t-0 header-title">
 									<b>Орц </b>
 								</h5>
+								<p:remoteCommand name="chosenOrts" process="@this" actionListener="#{infoController.chosenOrts()}" oncomplete="PF('ortsListDialog').hide()" update="@(.listOrtsTable)" />
+								<p:dialog widgetVar="ortsListDialog" id="ortsListDialog" width="500" height="300" resizable="false" modal="true">
+									<p:dataTable value="#{infoController.listOrts}" var="orts" selectionMode="single" rowKey="#{orts.pkId}" selection="#{infoController.selOrts}">
+										<p:ajax event="rowDblselect" oncomplete="chosenOrts();" />
+										<p:column headerText="Нэр">#{orts.name}</p:column>
+										<p:column headerText="Уураг">#{orts.uurag}</p:column>
+										<p:column headerText="Өөх тос">#{orts.uuhtos}</p:column>
+										<p:column headerText="Нүүрс ус">#{orts.nuursus}</p:column>
+										<p:column headerText="Илчлэг">#{orts.ilchleg}</p:column>
+									</p:dataTable>
+								</p:dialog>
 								<p class="text-muted font-13 m-b-30">Тухайн хоолонд орсон хүнисний бүтээгдэхүүн</p>
-								
-								<table class="table datatable-html">
-									<thead>
-										<tr>
-											<th>#</th>
-											<th>Нэр</th>
-											<th>Хэмжээ</th>
-											<th>Илчлэг</th>
-											<th>Уураг</th>
-											<th>Нүүрс ус</th>
-											<th>Өөх тос</th>
-											<th class="text-center">Үйлдэл</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr class="orts-table-row" en-data-id="">
-											<td>1</td>
-											<td>Будаа</td>
-											<td>11.00 гр</td>
-
-											<td>78.80</td>
-											<td>13.20</td>
-											<td>1.10</td>
-											<td>2.40</td>
-											<td class="text-center">
-											
-													<p:commandButton value="Өөрчлөх" id="withIcon"
-														icon="ui-icon-pencil"
-														styleClass="btn btn-warning btn-xs ui-priority-warning" />
-													<p:commandButton value="Устгах" id="withIcon"
-														icon="ui-icon-trash"
-														styleClass="btn btn-danger btn-xs ui-priority-danger" />
- 
-											</td>
-										</tr>
-
-										<tr>
-											<td>-</td>
-											<td>Гарц</td>
-											<td>11</td>
-											<td>78.8</td>
-											<td>13.2</td>
-											<td>1.1</td>
-											<td>2.4</td>
-											<td>-</td>
-										</tr>
-									</tbody>
-								</table>
+								<p:dataTable styleClass="listOrtsTable" value="#{infoController.listFoodOrtsTmp}" var="orts" rowIndexVar="index">
+									<p:column headerText="#" width="2%">#{index+1}</p:column>
+									<p:column headerText="Нэр" width="48%">
+										<p:inputText rendered="#{!'Last'.equals(orts.status)}" styleClass="form-control" disabled="true" value="#{orts.name}" />
+										<p:inputText onclick="PF('ortsListDialog').show();" rendered="#{'Last'.equals(orts.status)}" styleClass="form-control" value="#{orts.name}" />
+									</p:column>
+									<p:column headerText="Хэмжээ" width="10%">
+										<pe:inputNumber style="width: 100%; text-align: right;" value="#{orts.size}">
+										</pe:inputNumber>
+									</p:column>
+									<p:column headerText="Уураг" width="10%">
+										<pe:inputNumber style="width: 100%; text-align: right;" value="#{orts.uurag}">
+											<p:ajax event="change" listener="#{orts.calcInch()}" update="@(.listOrtsTable)" />
+										</pe:inputNumber>
+									</p:column>
+									<p:column headerText="Нүүрс ус" width="10%">
+										<pe:inputNumber style="width: 100%; text-align: right;" value="#{orts.nuursus}">
+											<p:ajax event="change" listener="#{orts.calcInch()}" update="@(.listOrtsTable)" />
+										</pe:inputNumber>
+									</p:column>
+									<p:column headerText="Өөх тос" width="10%">
+										<pe:inputNumber style="width: 100%; text-align: right;" value="#{orts.uuhtos}">
+											<p:ajax event="change" listener="#{orts.calcInch()}" update="@(.listOrtsTable)" />
+										</pe:inputNumber>
+									</p:column>
+									<p:column headerText="Илчлэг" width="10%">
+										<pe:inputNumber disabled="true" style="width: 100%; text-align: right;" value="#{orts.ilchleg}">
+										</pe:inputNumber>
+									</p:column>
+									<p:column headerText=""></p:column>
+								</p:dataTable>
 							</div>
 
 						</div>
 					</div>
-
-				</div>
-				<div class="col-md-8">
-
-					<div class="card-box">
-						<div class="row">
-
-							<div class="col-lg-12">
-								<h5 class="m-t-0 header-title">
-									<b>Хоолны орц </b>
-								</h5>
-								<form role="form">
-
-									<div class="form-group col-sm-6">
-										<label for="compgard">Хүнисний бүтэээгдэхүүн</label>
-										<p:selectOneMenu id="compgard" styleClass="form-control"
-											value="#{selectOneMenuView.console}" style="width:125px">
-											<f:selectItem itemLabel="Select One" itemValue="" />
-											<f:selectItem itemLabel="Xbox One" itemValue="Xbox One" />
-											<f:selectItem itemLabel="PS4" itemValue="PS4" />
-											<f:selectItem itemLabel="Wii U" itemValue="Wii U" />
-										</p:selectOneMenu>
-									</div>
-									<div class="form-group col-sm-6">
-										<label for="name">Хэмжээ</label>
-										<p:inputText styleClass="form-control" id="username"
-											type="number" placeholder="Нэр" />
-									</div>
-
-									<div class="form-group col-sm-6">
-										<label for="name">Уураг</label>
-										<p:inputText styleClass="form-control" id="username"
-											type="number" placeholder="Email" />
-									</div>
-									<div class="form-group col-sm-6">
-										<label for="name">Өөх тос</label>
-										<p:inputText styleClass="form-control" id="username"
-											type="number" placeholder="Email" />
-									</div>
-									<div class="form-group col-sm-6">
-										<label for="name">Нүүрс ус</label>
-										<p:inputText styleClass="form-control" id="username"
-											type="number" placeholder="Email" />
-									</div>
-									<div class="form-group col-sm-6">
-										<label for="name">Илчлэг</label>
-										<p:inputText styleClass="form-control" id="username"
-											type="number" placeholder="Email" />
-									</div>
-
-
-
-									<div class=" form-group ">
-
-										<button type="submit" class="btn btn-primary">
-											Хадгалах <i class="icon-arrow-right14 position-right"></i>
-										</button>
-									</div>
-								</form>
-							</div>
-						</div>
-					</div>
-
 				</div>
 			</div>
 		</div>
