--- a/Web/WebContent/foodlist.xhtml
+++ b/Web/WebContent/foodlist.xhtml
@@ -23,6 +23,17 @@
 				</div>
 			</div>
 
+			<p:dialog widgetVar="dialogFoorOrtsList" id="dialogFoorOrtsList" resizable="false" modal="true" width="500" height="400">
+				<p:dataTable styleClass="table myTable" value="#{infoController.listFoodOrts}" var="orts" rowIndexVar="index">
+					<p:column headerText="#">#{index + 1}</p:column>
+					<p:column headerText="Нэр">#{orts.name}</p:column>
+					<p:column headerText="Илчлэг">#{orts.ilchleg}</p:column>
+					<p:column headerText="Уураг">#{orts.uurag}</p:column>
+					<p:column headerText="Өөх тос">#{orts.uuhtos}</p:column>
+					<p:column headerText="Нүүрс ус">#{orts.nuursus}</p:column>
+					<p:column headerText="Хэмжээ">#{orts.size}</p:column>
+				</p:dataTable>
+			</p:dialog>
 
 			<div class="row">
 				<div class="col-md-12">
@@ -32,29 +43,40 @@
 							<div class="col-lg-12">
 								<ul class="nav nav-tabs tabs" style="width: 100%;">
 									<ui:repeat value="#{infoController.listFoodCategory}" var="cat">
-										<li class="tab #{cat.status}"><a
-											href="javascript:void(0)"
+										<li class="tab #{cat.status}"><a onclick="changeTab#{cat.pkId}();" 
+											href="javascript:void(0);"
 											class="active"> <span class="visible-xs"><i
 													class="fa fa-home"></i></span> <span class="hidden-xs">#{cat.name}</span>
 										</a></li>
+										<p:remoteCommand name="changeTab#{cat.pkId}" actionListener="#{infoController.setFoodCategoryByPkId(cat.pkId)}" update="@(.myTable)" />
 									</ui:repeat>
 								</ul>
 								<div class="tab-content">
 									<p:dataTable value="#{infoController.listFoodTmp}" styleClass="table myTable" var="tmp" rowIndexVar="index">
-										<p:column headerText="#">#{index+1}</p:column>
+										<p:column width="1%" headerText="#">#{index+1}</p:column>
 										<p:column headerText="Нэр">#{tmp.name}</p:column>
-										<p:column headerText="Илчлэг">#{tmp.ilchleg}</p:column>
-										<p:column headerText="Уураг">#{tmp.uurag}</p:column>
-										<p:column headerText="Өөх тос">#{tmp.uuhtos}</p:column>
-										<p:column headerText="Нүүрс ус">#{tmp.nuursus}</p:column>
-										<p:column headerText="Хэмжээ">#{tmp.size}</p:column>
+										<p:column width="10%" headerText="Илчлэг" style="text-align: right;">#{tmp.ilchleg}</p:column>
+										<p:column width="10%" headerText="Уураг" style="text-align: right;">#{tmp.uurag}</p:column>
+										<p:column width="10%" headerText="Өөх тос" style="text-align: right;">#{tmp.uuhtos}</p:column>
+										<p:column width="10%" headerText="Нүүрс ус" style="text-align: right;">#{tmp.nuursus}</p:column>
+										<p:column width="10%" headerText="Хэмжээ" style="text-align: right;">#{tmp.size}</p:column>
+										<p:column style="width: 231px;" headerText="">
+											<p:commandButton value="Орц харах" action="#{infoController.setListFoodOrtsByFoodPkId(tmp.pkId)}" oncomplete="PF('dialogFoorOrtsList').show();" styleClass="btn-success" update="@(.myTable)" />
+											<p:commandButton value="Засах" action="#{infoController.editListFoodOrtsByFoodPkId(tmp.pkId)}" styleClass="btn-warning" update="@(.myTable)" />
+											<p:commandButton value="Устгах" action="#{infoController.deleteListFoodOrtsByFoodPkId(tmp.pkId)}" styleClass="btn-danger">
+												<p:confirm header="Confirmation" message="Та устгахдаа итгэлтэй байна уу?" icon="ui-icon-alert" />
+											</p:commandButton>
+										</p:column>
 									</p:dataTable>
 								</div>
 							</div>
 							<div class="col-lg-12"></div>
 						</div>
 					</div>
-
+					<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+				        <p:commandButton value="Тийм" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+				        <p:commandButton value="Үгүй" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+				    </p:confirmDialog>
 
 				</div>
 				<!--  -->
