--- a/Web/WebContent/plan.xhtml
+++ b/Web/WebContent/plan.xhtml
@@ -40,7 +40,9 @@
 					</p:selectOneMenu>
 				</div>
 				<div class="col-sm-12">
-					<p:commandLink styleClass="btn" value="Хадгалах" action="#{planController.savePlanDtlTmp()}" style="float: right;" />
+					<p:panel styleClass="no-style-panel dtlDialog">
+						<p:commandLink styleClass="btn" disabled="#{planController.dtl.status ne 'Unchanged'}" process=":form:dtlDialog" value="Нэмэх" action="#{planController.addListPlanDtl()}" style="float: right;" />
+					</p:panel>
 				</div>
 			</p:dialog>
 			<div class="row">
@@ -50,10 +52,15 @@
 
 							<div class="col-sm-12">
 								Огноо :
-								<p:calendar value="#{planController.beginDate}" />
+								<p:calendar value="#{planController.date}" />
+								<p:commandLink styleClass="btn" value="сонгох" action="#{planController.changeDate()}" />
+								<div style="float: right;">
+								<p:calendar disabled="true" value="#{planController.beginDate}" />
 								-
-								<p:calendar value="#{planController.endDate}" />
+								<p:calendar disabled="true" value="#{planController.endDate}" />
+								</div>
 							</div>
+							<br/>
 							<div class="col-sm-12">
 								<table class="table table-bordered">
 									<tr>
@@ -67,11 +74,11 @@
 										<tr style="background-color: #{plan.cssStr}">
 											<td>#{plan.dateStr} (#{plan.dateOfWeekStr})</td>
 											<ui:repeat value="#{plan.dtls}" var="dtl">
-											<td style="padding: 0px;"><p:commandLink
-													action="#{planController.dtlDialogShow(dtl)}" style="width: calc(100%);height: 40px;display: block;background: white; padding: 5px;"
+											<td style="padding: 0px !important;"><p:commandLink
+													action="#{planController.dtlDialogShow(dtl)}" style="width: calc(100%);height: 40px;display: block;background: #{dtl.backGroundColor}; padding: 5px;"
 													value="#{dtl.value}" update="@(.dtlDialog)" /></td>
 											</ui:repeat>
-											<td></td>
+											<td>#{plan.sumIlchleg}</td>
 										</tr>
 									</ui:repeat>
 								</table>
@@ -81,14 +88,66 @@
 					</div>
 
 				</div>
-
-				<div class="row">
-					<div class="col-sm-3">
-
-
-						<div class="card-box table-responsive"></div>
+				<p:dialog widgetVar="selectPlanCategory" id="selectPlanCategory" width="300px" height="200px" modal="true" resizable="false">
+					<div class="col-sm-6">
+						Огноо : 
 					</div>
-					<div class="col-sm-9">
+					<div class="col-sm-6">
+						<p:calendar value="#{planController.dtl.date}" mindate="#{planController.beginDate}" maxdate="#{planController.endDate}" />
+					</div>
+					<div class="col-sm-6">
+						Хоолны цаг : 
+					</div>
+					<div class="col-sm-6">
+						<p:selectOneMenu style="width: 100%;" value="#{planController.dtl.planCategoryPkId}">
+							<f:selectItems value="#{planController.listPlanCategory}" var="pcat" itemLabel="#{pcat.name}" itemValue="#{pcat.pkId}" />
+						</p:selectOneMenu>
+					</div>
+					<div class="col-sm-6">
+						Хоолны төрөл : 
+					</div>
+					<div class="col-sm-6">
+						<p:selectOneMenu style="width: 100%;" value="#{planController.categoryPkId}">
+							<p:ajax event="change" listener="#{planController.changeCategory()}" update="@(.foodList)" />
+							<f:selectItems value="#{planController.categories}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat.pkId}" />
+						</p:selectOneMenu>
+					</div>
+					<div class="col-sm-6">
+						Хоол сонгох : 
+					</div>
+					<div class="col-sm-6">
+						<p:selectOneMenu style="width: 100%;" value="#{planController.dtl.foodPkId}" styleClass="foodList" filter="true">
+							<f:selectItems value="#{planController.foods}" var="food" itemLabel="#{food.name}" itemValue="#{food.pkId}" />
+						</p:selectOneMenu>
+					</div>
+					<div class="col-sm-12">
+						<p:commandLink styleClass="btn" process=":form:selectPlanCategory" value="Нэмэх" action="#{planController.addListPlanDtl()}" style="float: right;" />
+					</div>
+				</p:dialog>
+				<div class="row">
+					<div class="col-sm-6">
+						<div class="card-box table-responsive">
+							<p:dataTable styleClass="myTable" value="#{planController.listPlanDtlTmp}" var="tmp" rowIndexVar="index">
+								<p:column width="1%" headerText="#">#{index + 1}</p:column>
+								<p:column width="150px;" headerText="Цайны цаг">
+									<p:inputText disabled="true" rendered="#{tmp.status ne 'Last'}" style="width: 100%" value="#{tmp.planCategoryName}" />
+									<p:inputText rendered="#{tmp.status eq 'Last'}" onclick="PF('selectPlanCategory').show();" style="width: 100%" />
+								</p:column>
+								<p:column width="100px;" headerText="Огноо">
+									<p:calendar disabled="true" rendered="#{tmp.status ne 'Last'}" value="#{tmp.date}" />
+								</p:column >
+								<p:column headerText="Хоол">
+									<p:selectOneMenu disabled="true" rendered="#{tmp.status ne 'Last'}" style="width: 100%;" filter="true" value="#{tmp.foodPkId}">
+										<f:selectItems value="#{planController.listFood}" var="food" itemLabel="#{food.name}" itemValue="#{food.pkId}" />
+									</p:selectOneMenu>
+								</p:column>
+								<p:column headerText="Хоол">
+									<p:inputText disabled="true" rendered="#{tmp.status ne 'Last'}" style="width: 100%" value="#{tmp.ilchleg}" />
+								</p:column>
+							</p:dataTable>
+						</div>
+					</div>
+					<div class="col-sm-6">
 						<!-- <div class="card-box">
 								Хэрэв та хүнсний <strong>бүтээгдэхүүний төрөл</strong> болон <strong>шинэ бүтээгдэхүүн</strong> нэмэх бол <div class="btn-group">
                                         <button type="button" class="btn btn-danger dropdown-toggle waves-effect waves-light" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-plus"></i> Нэмэх <span class="caret"></span></button>
